# kobuki_rbot_controls

./: README.md
devel/: .catkin  .rosinstall  setup.sh
src/kobuki_avoiding_wall/: CMakeLists.txt  package.xml
src/kobuki_avoiding_wall/src/: avoiding_wall_node.py
src/kobuki_controller1/: CMakeLists.txt  package.xml
src/kobuki_controller1/launch/: kobuki_mover.launch  kobuki_odom_reader.launch
src/kobuki_controller1/msg/: Age.msg
src/kobuki_controller1/src/: odom_subscriber.py  parar_kobuki.py  robot_age_publisher.py  simple_topic_publisher.py
src/my_package/launch/: my_package_launch_file.launch
src/my_package/src/: simple.py  simple_topic_publisher.py  simple_topic_subscriber.py
